tests/failing/scope.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

fn test_func() {
    {
        i32 var = 0;
        # /tk error
        i32 var;
        # /tk error
        u32 var;
    }

    # /tk error
    var = 2;
}
